--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -47,8 +47,7 @@
     --color-blue-600: #1e88e5;
     --color-blue-700: #1976d2;
     --color-blue-800: #0c4870;
-    --color-blue-900: #013444;
-    --color-blue-900: #05313d;
+    --color-blue-900: #1e2e33;
 
     /* Red Scale */
     --color-red-100: #ffcdd2;
