--- a/src/pages/eventlist/Events.css
+++ b/src/pages/eventlist/Events.css
@@ -46,10 +46,19 @@
 
 .event-list-separator {
   position: relative;
-  margin: 1.2rem 0 .2rem 0;
+  margin: 1.2rem .5rem .2rem .5rem;
 }
 
-.event-list-separator.event-list-separator--first {
+.event-list-separator::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  height: .13rem;
+  background-color: var(--color-border-default);
+}
+
+.event-list-separator--first {
   margin-top: .2rem;
 }
 
@@ -65,15 +74,6 @@
   padding: 0 1rem;
   margin: 0 auto;
   position: relative;
-}
-
-.event-list-separator::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  width: 100%;
-  height: .13rem;
-  background-color: var(--color-border-default);
 }
 
 
@@ -109,6 +109,11 @@
 
   .events__list--grid-view .event-list-separator {
     display: none;
+  }
+
+  .event-list-separator {
+    margin-right: 1rem;
+    margin-left: 1rem
   }
 }
 
@@ -167,7 +172,7 @@
     height: 2rem;
     position: absolute;
     border-width: .7rem;
-    border-color: var(--color-border-default);
+    border-color: var(--color-border-light);
     border-style: none solid solid none;
     bottom: 0;
     right: 0;
@@ -180,7 +185,7 @@
     height: 2rem;
     position: absolute;
     border-width: .7rem;
-    border-color: var(--color-border-default);
+    border-color: var(--color-border-light);
     border-style: solid solid none none;
     top: 0;
     right: 0;
