--- a/src/pages/jobad/JobadPage.css
+++ b/src/pages/jobad/JobadPage.css
@@ -194,7 +194,7 @@
         height: 2rem;
         position: absolute;
         border-width: .7rem;
-        border-color: var(--color-border-default);
+        border-color: var(--color-border-light);
         border-style: solid solid none none;
         top: 0;
         right: 0;
@@ -207,7 +207,7 @@
         height: 2rem;
         position: absolute;
         border-width: .7rem;
-        border-color: var(--color-border-default);
+        border-color: var(--color-border-light);
         border-style: none none solid solid;
         bottom: 0;
         left: 0;
@@ -250,7 +250,7 @@
         height: 2rem;
         position: absolute;
         border-width: .7rem;
-        border-color: var(--color-border-default);
+        border-color: var(--color-border-light);
         border-style: solid solid none none;
         top: 0;
         right: 0;
@@ -263,7 +263,7 @@
         height: 2rem;
         position: absolute;
         border-width: .7rem;
-        border-color: var(--color-border-default);
+        border-color: var(--color-border-light);
         border-style: none solid solid none;
         bottom: 0;
         right: 0;
