--- a/src/pages/landing/LandingPage.css
+++ b/src/pages/landing/LandingPage.css
@@ -1,301 +1,285 @@
 /* section previewing events and job ads */
 
 .dynamic-preview {
-    padding: 2rem 0;
+  padding: 1rem 0;
 }
 
 .dynamic-preview-heading {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem;
 }
 
 .dynamic-preview-heading__title {
-    padding: .5rem 0;
-    font-weight: 400;
-    font-size: 1.5rem;
+  padding: 0.5rem 0;
+  font-weight: 400;
+  font-size: 1.5rem;
 }
 
 .dynamic-preview-heading__link {
-    display: block;
-    padding: .5em 1.5em .5em 1em;
-    position: relative;
-    line-height: 1.4em;
-    height: 2.4em;
-    font-weight: 500;
+  display: block;
+  padding: 0.5em 1.5em 0.5em 1em;
+  position: relative;
+  line-height: 1.4em;
+  height: 2.4em;
+  font-weight: 500;
 }
 
 .dynamic-preview-heading__link:hover .dynamic-preview-heading__link-text {
-    color: var(--color-link-primary);
+  color: var(--color-link-primary);
 }
 
 /* hide the text on small screens (arrow still visible) */
 .dynamic-preview-heading__link-text {
-    display: none; 
+  display: none;
 }
 
 /* TODO: create global resuable class for this side arrow */
 .dynamic-preview-heading__link:after {
-    content: '';
-    position: absolute;
-    width: .6em;
-    height: .6em;
-    top: .85em;
-    right: .5em;
-    border-right: .18em solid var(--color-link-primary);
-    border-bottom: .18em solid var(--color-link-primary);
-    -webkit-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    z-index: 5;
-    transition: .2s;
+  content: "";
+  position: absolute;
+  width: 0.6em;
+  height: 0.6em;
+  top: 0.85em;
+  right: 0.5em;
+  border-right: 0.18em solid var(--color-link-primary);
+  border-bottom: 0.18em solid var(--color-link-primary);
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  z-index: 5;
+  transition: 0.2s;
 }
 
-
 .dynamic-preview-seperator {
-    display: none;
+  display: none;
 }
 
 .dynamic-preview-list {
-    display: grid;
-    grid-auto-flow: column;
-    list-style-type: none;
-    overflow: auto;
-    padding: 0 1rem 1rem 1rem;
-    scroll-snap-type: x mandatory;
+  display: grid;
+  grid-auto-flow: column;
+  list-style-type: none;
+  overflow: auto;
+  padding: 0 1rem 1rem 1rem;
+  scroll-snap-type: x mandatory;
+  position: relative;
 }
 
 .dynamic-preview-list__item {
-    scroll-snap-align: center;
-    width: 80vw;
-    max-width: 22rem;
-    min-width: 18rem;
+  scroll-snap-align: center;
+  width: 80vw;
+  max-width: 22rem;
+  min-width: 18rem;
 }
 
 .dynamic-preview-end-card {
-    width: fit-content;
-    min-width: 14rem;
+  width: fit-content;
+  min-width: 14rem;
 }
 
 .dynamic-preview-end-card__btn {
-    width: 100%;
-    height: 100%;
-    border-radius: var(--border-radius);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  width: 100%;
+  height: 100%;
+  border-radius: var(--border-radius);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .dynamic-preview-end-card__btn:hover {
-    background-color: var(--color-bg-surface);
+  background-color: var(--color-bg-surface);
 }
 
 .dynamic-preview-end-card__text {
-    font-size: 1.3rem;
-    font-weight: 500;
-    padding-top: 1rem;
+  font-size: 1.3rem;
+  font-weight: 500;
+  padding-top: 1rem;
 }
 
 .dynamic-preview-end-card__arrow-container {
-    width: 5.2rem;
-    height: 5.2rem;
-    background-color: var(--color-bg-surface);
-    border-radius: 100%;
-    box-shadow: var(--container-shadow);
+  width: 5.2rem;
+  height: 5.2rem;
+  background-color: var(--color-bg-surface);
+  border-radius: 100%;
+  box-shadow: var(--container-shadow);
 }
 .dynamic-preview-end-card__arrow {
-    width: 1.8rem;
-    height: 1.8rem;
-    margin-top: 1.8rem;
-    margin-left: 1.4rem;
-    border-right: .35rem solid var(--color-primary);
-    border-bottom: .35rem solid var(--color-primary);
-    -webkit-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    z-index: 5;
-    transition: .2s;
+  width: 1.8rem;
+  height: 1.8rem;
+  margin-top: 1.8rem;
+  margin-left: 1.4rem;
+  border-right: 0.35rem solid var(--color-primary);
+  border-bottom: 0.35rem solid var(--color-primary);
+  -webkit-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  z-index: 5;
+  transition: 0.2s;
 }
 .dynamic-preview-end-card__btn:hover .dynamic-preview-end-card__arrow-container {
-    box-shadow: none;
+  box-shadow: none;
 }
 
-
 @media only screen and (min-width: 350px) {
-    .dynamic-preview-heading__link-text {
-        display: block;
-    }
+  .dynamic-preview-heading__link-text {
+    display: block;
+  }
 }
 
 @media only screen and (min-width: 400px) {
-    .dynamic-preview-list {
-        gap: 1rem;
-    }
+  .dynamic-preview-list {
+    gap: 1rem;
+  }
 }
 
 @media only screen and (min-width: 800px) {
+  .dynamic-preview {
+    padding: 2rem 1rem;
+    margin: 0 auto;
+  }
 
-    .dynamic-preview {
-        padding: 2rem 1rem;
-        margin: 0 auto;
-    }
+  .dynamic-preview-heading {
+    padding: 0 3rem;
+  }
 
-    .dynamic-preview-heading {
-        padding: 0 3rem;
-    }
+  .dynamic-preview-heading__title {
+    font-size: 1.8rem;
+    padding-left: 0;
+  }
 
-    .dynamic-preview-heading__title {
-        font-size: 1.8rem;
-        padding-left: 0;
-    }
+  .dynamic-preview-heading__link {
+    font-size: 1.2rem;
+    line-height: 1.4em;
+  }
 
-    .dynamic-preview-heading__link {
-        font-size: 1.2rem;
-        line-height: 1.4em;
-    }
+  .dynamic-preview-list {
+    grid-template-columns: 1fr 1fr;
+    grid-auto-flow: inherit;
+    padding: 1rem 4vw 0 4vw;
+    gap: 4vw;
+  }
 
-    .dynamic-preview-list {
-        grid-template-columns: 1fr 1fr;
-        grid-auto-flow: inherit;
-        padding: 1rem 4vw 0 4vw;
-        gap: 4vw;
-    }
+  .dynamic-preview-list__item {
+    width: 100%;
+    max-width: 28rem;
+  }
 
-    .dynamic-preview-list__item {
-        width: 100%;
-        max-width: 28rem;
-    }
+  .dynamic-preview-end-card {
+    width: 100%;
+  }
 
-    .dynamic-preview-end-card {
-        width: 100%;
-    }
-
-    .dynamic-preview-seperator {
-        display: block;
-        border: 0;
-        height: .15rem;
-        background-color: var(--color-border-default); 
-        margin: 0 2rem;
-    }
-
+  .dynamic-preview-seperator {
+    display: block;
+    border: 0;
+    height: 0.15rem;
+    background-color: var(--color-border-light);
+    margin: 0 2rem;
+  }
 }
 
 @media only screen and (min-width: 1000px) {
+  .dynamic-preview {
+    width: 100%;
+    max-width: var(--w-page);
+  }
 
-    .dynamic-preview {
-        width: 100%;
-        max-width: var(--w-page);
-    }
+  .dynamic-preview-heading {
+    padding: 0 1rem 0.5rem 1rem;
+    margin: auto;
+  }
 
-    .dynamic-preview-heading {
-        padding: 0 1rem .5rem 1rem;
-        margin: auto;
-    }
+  .dynamic-preview-heading__title {
+    font-size: 2rem;
+  }
 
-    .dynamic-preview-heading__title {
-        font-size: 2rem;
-    }
+  .dynamic-preview-list {
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1rem;
+    padding: 0;
+  }
 
-    .dynamic-preview-list {
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 1rem;
-        padding: 0;
-    }
+  .dynamic-preview-list__item {
+    margin: 0 auto;
+  }
 
-    .dynamic-preview-list__item {
-        margin: 0 auto;
-    }
+  .dynamic-preview-end-card {
+    display: none; /* "see all" link is in the header on big screens */
+  }
 
-    .dynamic-preview-list__item--loading {
-        height: 14rem;
-        max-width: 20.5rem;
-        border: .15rem solid var(--color-border-default);
-        background-color: var(--color-bg-surface);
-        width: 100%;
-    }
-
-    .dynamic-preview-end-card {
-        display: none; /* "see all" link is in the header on big screens */
-    }
-
-    .dynamic-preview-seperator {
-        margin: 2rem auto;
-        max-width: calc(var(--w-page) - 2rem);
-    }
+  .dynamic-preview-seperator {
+    margin: 2rem auto;
+    max-width: calc(var(--w-page) - 2rem);
+  }
 }
-
 
 /* landing page infomation section */
 
 .landing-info {
-    max-width: 75rem;
-    width: 100%;
-    margin: 3rem auto;
-    display: grid;
-    column-gap: 4rem;
-    padding: 1rem;
-    grid-template-columns: 1fr;
-    grid-template-areas: 
-        'b'
-        'a';
+  max-width: 75rem;
+  width: 100%;
+  margin: 3rem auto;
+  display: grid;
+  column-gap: 4rem;
+  padding: 1rem;
+  grid-template-columns: 1fr;
+  grid-template-areas:
+    "b"
+    "a";
 }
 
 .landing-info__text {
-    grid-area: a;
-    max-width: 31rem;
-    width: 100%;
-    margin: auto;
-    padding: 1rem 0;
+  grid-area: a;
+  max-width: 31rem;
+  width: 100%;
+  margin: auto;
+  padding: 1rem 0;
 }
 
 .landing-info__link {
-    margin-top: 1rem;
-    padding: .7rem 1rem .7rem 0;
-    font-size: 1.3rem;
-    width: fit-content;
-    display: block;
+  margin-top: 1rem;
+  padding: 0.7rem 1rem 0.7rem 0;
+  font-size: 1.3rem;
+  width: fit-content;
+  display: block;
 }
 
 .landing-info__picture {
-    grid-area: b;
-    width: 100%;
-    margin: auto;
-    max-width: 31rem;
+  grid-area: b;
+  width: 100%;
+  margin: auto;
+  max-width: 31rem;
 }
 
-
 @media only screen and (min-width: 800px) {
-    .landing-info {
-        padding: 8rem 2rem 0;
-        grid-template-columns: repeat(7, 1fr);
-        gap: 4rem; 
-    }
+  .landing-info {
+    padding: 8rem 2rem 0;
+    grid-template-columns: repeat(7, 1fr);
+    gap: 4rem;
+  }
 
-    .landing-info:nth-child(odd) {
-        grid-template-areas: 
-            'a a a b b b b';
-    }
+  .landing-info:nth-child(odd) {
+    grid-template-areas: "a a a b b b b";
+  }
 
-    .landing-info:nth-child(even) {
-        grid-template-areas: 
-            'b b b b a a a';
-    }
+  .landing-info:nth-child(even) {
+    grid-template-areas: "b b b b a a a";
+  }
 
-    .landing-info__picture {
-        max-width: 40rem;
-    }
+  .landing-info__picture {
+    max-width: 40rem;
+  }
 }
 
 @media only screen and (min-width: 1000px) {
-    .landing-info {
-        gap: 5rem; 
-    }
+  .landing-info {
+    gap: 5rem;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
-    .landing-info {
-        gap: 6rem; 
-    }
+  .landing-info {
+    gap: 6rem;
+  }
 }
