--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -215,7 +215,7 @@ body {
         width: 2rem;
         height: 2rem;
         border-width: .7rem;
-        border-color: var(--color-border-default);
+        border-color: var(--color-border-light);
         border-style: solid none none solid;
         margin-left: -1.5rem;
         margin-top: -.8rem;
