--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,359 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    /* Base Colors */
+    --color-primary-100: #ffe0cc;
+    --color-primary-200: #ffc199;
+    --color-primary-300: #ffa266;
+    --color-primary-400: #ff8333;
+    --color-primary-500: #fd8738;
+    --color-primary-600: #d95d0a;
+    --color-primary-700: #b34600;
+    --color-primary-800: #8c3700;
+    --color-primary-900: #431e00;
+
+    --color-secondary-100: #ded5fb;
+    --color-secondary-200: #bcaaf7;
+    --color-secondary-300: #9b80f3;
+    --color-secondary-400: #7955ef;
+    --color-secondary-500: #5e49e6;
+    --color-secondary-600: #4936b8;
+    --color-secondary-700: #37298a;
+    --color-secondary-800: #251b5c;
+    --color-secondary-900: #130e2e;
+
+    /* Absolute colors */
+    --color-white: #fff;
+    --color-black: #000;
+
+    /* Grey scale */
+    --color-grey-50:  #fefefe;
+    --color-grey-100: #f9f9f9;
+    --color-grey-200: #f2f2f2;
+    --color-grey-300: #e6e6e6;
+    --color-grey-400: #cccccc;
+    --color-grey-500: #b3b3b3;
+    --color-grey-600: #8c8c8c;
+    --color-grey-700: #707070;
+    --color-grey-800: #424242;
+    --color-grey-850: #252525;
+    --color-grey-900: #191919;
+    --color-grey-950: #0d0d0d;
+
+    /* Blue Scale */
+    --color-blue-100: #c8e3f9;
+    --color-blue-200: #90caf9;
+    --color-blue-300: #64b5f6;
+    --color-blue-400: #42a5f5;
+    --color-blue-500: #2196f3;
+    --color-blue-600: #1e88e5;
+    --color-blue-700: #1976d2;
+    --color-blue-800: #0c4870;
+    --color-blue-900: #013444;
+    --color-blue-900: #05313d;
+
+    /* Red Scale */
+    --color-red-100: #ffcdd2;
+    --color-red-200: #ef9a9a;
+    --color-red-300: #e57373;
+    --color-red-400: #ef5350;
+    --color-red-500: #f44336;
+    --color-red-600: #e53935;
+    --color-red-700: #d32f2f;
+    --color-red-800: #c62828;
+    --color-red-900: #6f1212;
+
+    /* Green Scale */
+    --color-green-100: #c8e6c9;
+    --color-green-200: #a5d6a7;
+    --color-green-300: #81c784;
+    --color-green-400: #66bb6a;
+    --color-green-500: #4caf50;
+    --color-green-600: #43a047;
+    --color-green-700: #388e3c;
+    --color-green-800: #2e7d32;
+    --color-green-900: #1b5e20;
+
+    /* Yellow Scale */
+    --color-yellow-100: #fdf3d4;
+    --color-yellow-200: #fcf0ca;
+    --color-yellow-300: #fbe6aa;
+    --color-yellow-400: #f7d46a;
+    --color-yellow-500: #fcc727;
+    --color-yellow-600: #e9b824;
+    --color-yellow-700: #b79120;
+    --color-yellow-800: #927419;
+    --color-yellow-900: #3c300e;
+
+    /* Theme toggle button */
+    --color-moon: var(--color-grey-800);
+    --color-sun: white;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  	:root {
+		color-scheme: dark;
+  
+  	  	/* Semantic Colors */
+		--color-primary: var(--color-primary-500);
+		--color-primary-light: var(--color-primary-300);
+		--color-primary-dark: var(--color-primary-700);
+		
+		--color-secondary: var(--color-secondary-500);
+		--color-secondary-light: var(--color-secondary-300);
+		--color-secondary-dark: var(--color-secondary-700);
+
+		/* Background Colors */
+		--color-bg-body: var(--color-grey-900);
+		--color-bg-surface: var(--color-grey-850);
+		--color-bg-surface-raised: var(--color-grey-800);
+		--color-bg-surface-sunken: var(--color-grey-950);
+		--color-bg-overlay: rgba(0, 0, 0, 0.4);
+
+		/* Top Bar */
+		--color-bg-topbar: rgba(30, 30, 30, 0.6);
+		--color-bg-topbar-fallback: rgba(34, 33, 32, 0.99); /* fallback if blur is not supported */
+		--color-bg-topbar-open: rgba(20, 20, 20, .8);
+		
+		/* Footer */
+		--color-bg-footer: var(--color-grey-950);
+		--color-text-footer: var(--color-grey-200);
+		--color-text-footer-discret: var(--color-grey-600);
+
+
+		/* Text Colors */
+		--color-text-main: var(--color-white);
+		--color-text-regular: var(--color-grey-300);
+		--color-text-discreet: var(--color-grey-500);
+		--color-text-disabled: var(--color-grey-700);
+		--color-text-primary: var(--color-primary-500);
+		--color-text-on-primary: var(--color-white);
+	
+
+		/* Border Colors */
+		--color-border-default: var(--color-grey-800);
+		--color-border-light: var(--color-grey-700);
+		--color-border-strong: var(--color-grey-900);
+	
+
+		/* Buttons */
+		--color-btn-primary-bg: var(--color-primary-600);
+		--color-btn-primary-bg-active: var(--color-primary-700);
+		--color-btn-primary-text: var(--color-text-on-primary);
+		
+		--color-btn-secondary-bg: var(--color-grey-800);
+		--color-btn-secondary-bg-active: var(--color-grey-850);
+		--color-btn-secondary-text: var(--color-white);
+
+		--color-btn-primary-outlined: var(--color-primary-500);
+		--color-btn-secondary-outlined: var(--color-grey-800);
+		
+		--color-btn-danger-bg: var(--color-red-500);
+		--color-btn-danger-bg-active: var(--color-red-700);
+		--color-btn-danger-text: var(--color-white);
+
+		--color-btn-disabled-bg: var(--color-grey-400);
+		--color-btn-disabled-text: var(--color-grey-600);
+
+
+		/* Form Element Colors */
+		--color-checkbox-outline: var(--color-grey-600);
+		--color-checkbox-bg-hover: var(--color-grey-800);
+
+		--color-checktag-bg: var(--color-grey-800);
+		--color-checktag-text: var(--color-white);
+	
+
+		/* Links */
+		--color-link-primary: var(--color-primary-500);
+		--color-link-secondary: var(--color-secondary-500);
+
+
+		/* Alert Colors */
+		--color-alert-info-bg: var(--color-blue-900);
+		--color-alert-info-text: var(--color-blue-100);
+		--color-alert-info-icon: var(--color-blue-300);
+	
+		--color-alert-success-bg: var(--color-green-900);
+		--color-alert-success-text: var(--color-green-100);
+		--color-alert-success-icon: var(--color-green-700);
+	
+		--color-alert-warning-bg: var(--color-yellow-900);
+		--color-alert-warning-text: var(--color-yellow-100);
+		--color-alert-warning-icon: var(--color-yellow-500);
+	
+		--color-alert-danger-bg: var(--color-red-900);
+		--color-alert-danger-text: var(--color-red-100);
+		--color-alert-danger-icon: var(--color-red-200);
+	
+
+		/* Tag Colors */
+		--color-tag-info-text: var(--color-blue-300);
+		--color-tag-info-bg: none;
+		--color-tag-info-border: var(--color-blue-300);
+
+		--color-tag-highlight-text: linear-gradient(to right, #FF512F 0%, #F09819 51%, #FF512F 100%);
+		--color-tag-highlight-bg: linear-gradient(to right, #FF512F 0%, #F09819 51%, #FF512F 100%);
+		--color-tag-highlight-boder: linear-gradient(to right, #FF512F 0%, #F09819 51%, #FF512F 100%);
+
+		--color-tag-danger-text: var(--color-red-500);
+		--color-tag-danger-border: var(--color-red-500);
+		--color-tag-danger-bg: color-mix(in srgb, var(--color-red-700) 15%, transparent);
+
+		--color-tag-success-text: var(--color-green-400);
+		--color-tag-success-border: var(--color-green-400);
+		--color-tag-success-bg: color-mix(in srgb, var(--color-green-700) 15%, transparent);
+
+
+		/* Gradients */
+		--gradient-highlight: linear-gradient(to right, #FF512F 0%, #F09819 51%, #FF512F 100%);
+		--gradient-highlight-hover: linear-gradient(to right, #FF512F 0%, #F09819 20%, #FF512F 50%);
+
+		/* Hero Section */
+		--gradient-hero-section-bg: linear-gradient(160deg, #202020 30%, #0c0c0c);
+		--gradient-hero-section-text: linear-gradient(135deg, #fd8738 50%, #ff6a85);
+
+
+		/* Shadow */
+		--container-shadow: none;
+		--topbar-dropdown-shadow: 0 0.1rem 0.5rem rgba(3,3,3,0.5);
+	}
+}
+
+@media (prefers-color-scheme: light) {
+	:root {
+		color-scheme: light;
+  
+		/* Semantic Colors */
+		--color-primary: var(--color-primary-500);
+		--color-primary-light: var(--color-primary-300);
+		--color-primary-dark: var(--color-primary-700);
+		
+		--color-secondary: var(--color-secondary-500);
+		--color-secondary-light: var(--color-secondary-300);
+		--color-secondary-dark: var(--color-secondary-700);
+
+
+		/* Background Colors */
+		--color-bg-body: var(--color-grey-300);
+		--color-bg-surface: var(--color-grey-200);
+		--color-bg-surface-raised: white;
+		--color-bg-surface-sunken: var(--color-grey-200);
+		--color-bg-overlay: rgba(255, 255, 255, 0.8);
+
+		/* Top Bar */
+		--color-bg-topbar: rgba(240, 240, 240, 0.85);
+		--color-bg-topbar-fallback: rgba(253, 251, 250, 0.99); /* fallback if blur is not supported */
+		--color-bg-topbar-open: rgba(0, 0, 0, .9);
+
+
+		/* Footer */
+		--color-bg-footer: var(--color-grey-850);
+		--color-text-footer: var(--color-grey-200);
+		--color-text-footer-discret: var(--color-grey-500);
+	
+
+		/* Text Colors */
+		--color-text-main: var(--color-black);
+		--color-text-regular: var(--color-grey-850);
+		--color-text-discreet: var(--color-grey-800);
+		--color-text-disabled: var(--color-grey-400);
+		--color-text-primary: var(--color-primary-700);
+		--color-text-on-primary: var(--color-white);
+
+		
+		/* Border Colors */
+		--color-border-default: var(--color-grey-500);
+		--color-border-light: var(--color-grey-300);
+		--color-border-strong: var(--color-grey-600);
+	
+
+		/* Button Colors */
+		--color-btn-primary-bg: var(--color-primary-600);
+		--color-btn-primary-bg-active: var(--color-primary-700);
+		--color-btn-primary-text: var(--color-text-on-primary);
+		
+		--color-btn-secondary-bg: var(--color-grey-400);
+		--color-btn-secondary-bg-active: var(--color-grey-300);
+		--color-btn-secondary-text: var(--color-black);
+
+		--color-btn-primary-outlined: var(--color-primary-700);
+		--color-btn-secondary-outlined: var(--color-grey-400);
+		
+		--color-btn-danger-bg: var(--color-red-500);
+		--color-btn-danger-bg-active: var(--color-red-700);
+		--color-btn-danger-text: var(--color-white);
+
+		--color-btn-disabled-bg: var(--color-grey-400);
+		--color-btn-disabled-text: var(--color-grey-600);
+	
+
+		/* Form Element Colors */
+		--color-checkbox-outline: var(--color-grey-600);
+		--color-checkbox-bg-hover: var(--color-grey-300);
+
+		--color-checktag-bg: var(--color-grey-400);
+		--color-checktag-text: var(--color-black);
+	
+
+		/* Links */
+		--color-link-primary: var(--color-primary-700);
+		--color-link-secondary: var(--color-secondary-500);
+	
+
+		/* Alert Colors */
+		--color-alert-info-bg: var(--color-blue-100);
+		--color-alert-info-text: var(--color-blue-900);
+		--color-alert-info-icon: var(--color-blue-700);
+	
+		--color-alert-success-bg: var(--color-green-50);
+		--color-alert-success-text: var(--color-green-900);
+		--color-alert-success-icon: var(--color-green-500);
+	
+		--color-alert-warning-bg: var(--color-yellow-400);
+		--color-alert-warning-text: var(--color-black);
+		--color-alert-warning-icon: var(--color-yellow-900);
+	
+		--color-alert-danger-bg: var(--color-red-100);
+		--color-alert-danger-text: var(--color-red-900);
+		--color-alert-danger-icon: var(--color-red-800);
+	
+
+		/* Tag Colors */
+		--color-tag-info-text: var(--color-white);
+		--color-tag-info-bg: var(--color-blue-600);
+		--color-tag-info-border: var(--color-blue-600);
+
+		--color-tag-highlight-text: var(--color-white);
+		--color-tag-highlight-bg: var(--color-primary-600);
+		--color-tag-highlight-boder: var(--color-primary-600);
+
+		--color-tag-danger-text: var(--color-red-900);
+		--color-tag-danger-border: var(--color-red-900);
+		--color-tag-danger-bg: var(--color-red-200);
+
+		--color-tag-success-text: var(--color-green-900);
+		--color-tag-success-border: var(--color-green-100);
+		--color-tag-success-bg: var(--color-green-100);
+
+
+		/* Gradients */
+		--gradient-highlight: linear-gradient(to right, #FF512F 0%, #F09819 51%, #FF512F 100%);
+		--gradient-highlight-hover: linear-gradient(to right, #FF512F 0%, #F09819 20%, #FF512F 50%);
+
+		/* Hero Section */
+		--gradient-hero-section-bg: linear-gradient(150deg, #ffffff 5%, #d1d1d1);
+		--gradient-hero-section-text: linear-gradient(135deg, #fd8738 50%, #ff6a85);
+
+
+		/* Shadow */
+		--container-shadow: 0 .1rem .5rem .1rem rgba(200,200,200, 0.3);
+		--topbar-dropdown-shadow: 0 0.1rem 0.5rem rgba(0,0,0,0.1);
+  	}
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+	color: var(--color-text-main);
+	background: var(--color-bg-body);
+	font-family: Arial, Helvetica, sans-serif;
 }
