--- a/src/components/shared/themetoggle/toggle.css
+++ b/src/components/shared/themetoggle/toggle.css
@@ -10,7 +10,7 @@
     background-color: rgb(90,90,90,0.1);
 }
 
-.theme-toggle_svg {
+.theme-toggle__svg {
     height: 3rem;
     padding: .8rem .8rem;
 }
@@ -23,45 +23,45 @@
     for color managment. See colors.css
 */
 
-.light .theme-toggle_svg {
-    fill: #000
+.light .theme-toggle__svg {
+    fill: var(--color-moon);
 }
 
-.light .topbar--open .theme-toggle_svg {
-    fill: #fff
+.light .topbar--open .theme-toggle__svg {
+    fill: var(--color-sun);
 }
 
-.dark .theme-toggle_svg {
-    fill: #fff
+.dark .theme-toggle__svg {
+    fill: var(--color-sun);
 }
 
-.theme-toggle_sun-ray {
+.theme-toggle__sun-ray {
     transition: .4s;
     transition: .4s;
 }
 
-.light .theme-toggle_sun-ray {
+.light .theme-toggle__sun-ray {
     opacity: 0;
 }
 
-.dark .theme-toggle_sun-ray {
+.dark .theme-toggle__sun-ray {
     opacity: 1;
 }
 
-.theme-toggle_mask-circle {
+.theme-toggle__mask-circle {
     transition: .4s;
     z-index: 999;
 }
 
-.dark .theme-toggle_mask-circle {
+.dark .theme-toggle__mask-circle {
     transform: translate(2rem, -1rem);
 }
 
-.theme-toggle_sun-moon {
+.theme-toggle__sun-moon {
     transform-origin: center;
     transition: .4s;
 }
 
-.light .theme-toggle_sun-moon {
+.light .theme-toggle__sun-moon {
     transform: scale(1.9);
 }
