--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,6 +69,7 @@
 	--breakpoint-800px: 800px;
 	--breakpoint-900px: 900px;
 	--breakpoint-1000px: 1000px;
+	--breakpoint-1200px: 1200px;
 
 	/* Base Colors */
 	--color-login-orange: 	#f08029;
