--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,14 @@
 @import "tailwindcss";
 
+@config '../../tailwind.config.ts';
 
+@utility noscroll {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+      display: none;
+  }
+}
 
 :root {
     /* font family */
@@ -376,7 +384,6 @@ abbr {
 		box-sizing: border-box;
 		font-family: var(--font-primary);
 		color: var(--color-text-main);
-		transition: .2s;
 	}
 
 	.heading-1 {
