--- a/src/components/shared/themetoggle/toggle.css
+++ b/src/components/shared/themetoggle/toggle.css
@@ -1,67 +1,43 @@
-.theme-toggle {
-    display: block;
-    cursor: pointer;
-    border-radius: var(--border-radius);
-    background: none;
-    border: none;
-}
-
-.theme-toggle:hover {
-    background-color: rgb(90,90,90,0.1);
-}
-
-.theme-toggle__svg {
+.theme-toggle_svg {
     height: 3rem;
     padding: .8rem .8rem;
 }
 
-
-/* 
-    NOTE: the ".light" class below is used for the theme 
-    toggle animation.
-    Dont use this class for color changes, use root varibles
-    for color managment. See colors.css
-*/
-
-.light .theme-toggle__svg {
-    fill: var(--color-moon);
+.dark .theme-toggle_svg {
+    fill: white
 }
 
-.light .topbar--open .theme-toggle__svg {
-    fill: var(--color-sun);
-}
-
-.dark .theme-toggle__svg {
-    fill: var(--color-sun);
-}
-
-.theme-toggle__sun-ray {
-    transition: .4s;
+.theme-toggle_sun-ray {
     transition: .4s;
 }
 
-.light .theme-toggle__sun-ray {
+.light .theme-toggle_sun-ray {
     opacity: 0;
 }
 
-.dark .theme-toggle__sun-ray {
+.dark .theme-toggle_sun-ray {
     opacity: 1;
 }
 
-.theme-toggle__mask-circle {
+.theme-toggle_mask-circle {
     transition: .4s;
-    z-index: 999;
 }
 
-.dark .theme-toggle__mask-circle {
+.dark .theme-toggle_mask-circle {
     transform: translate(2rem, -1rem);
 }
 
-.theme-toggle__sun-moon {
+.theme-toggle_sun-moon {
     transform-origin: center;
     transition: .4s;
 }
 
-.light .theme-toggle__sun-moon {
+.light .theme-toggle_sun-moon {
     transform: scale(1.9);
+    fill: black;
+}
+
+.dark .theme-toggle_sun-moon {
+    transform: scale(1);
+    fill: white;
 }
