--- a/src/components/event/EventItem.css
+++ b/src/components/event/EventItem.css
@@ -17,23 +17,23 @@
   background: var(--gradient-highlight-hover);
 }
 
-.event-item__wrapper {
+.event-item_wrapper {
   z-index: 2;
   border-radius: var(--border-radius);
   background-color: var(--color-bg-body);
 }
 
-.event-item:hover .event-item__wrapper {
+.event-item:hover .event-item_wrapper {
   background-color: var(--color-bg-surface);
 }
 
-.event-item__picture {
+.event-item_picture {
   border-radius: var(--border-radius);
   background-color: rgba(128, 128, 128, 0.05);
   aspect-ratio: 10 / 4;
 }
 
-.event-item__info {
+.event-item_info {
   flex-grow: 1;
   display: flex;
   flex-direction: column;
@@ -50,13 +50,13 @@
   hyphens: auto;
 }
 
-.event-item__name {
+.event-item_name {
   font-weight: 400;
   font-size: 1.1rem;
   line-height: 1.3em;
 }
 
-.event-item__details {
+.event-item_details {
   list-style: none;
   margin-top: 0.5rem;
   display: flex;
@@ -66,13 +66,13 @@
   flex-grow: 1;
 }
 
-.event-item__detail {
+.event-item_detail {
   display: inline-block;
   color: var(--color-text-regular);
   font-size: 0.9rem;
 }
 
-.event-item__icon {
+.event-item_icon {
   color: var(---color-text-regular);
   padding-right: 0.3rem;
   line-height: inherit;
@@ -80,7 +80,7 @@
   vertical-align: top;
 }
 
-.event-item__tags {
+.event-item_tags {
   display: flex;
   gap: 0.5rem;
 }
@@ -94,22 +94,22 @@
   container-type: inline-size;
 }
 
-.event-item--card .event-item__wrapper {
+.event-item--card .event-item_wrapper {
   padding: 1rem;
   height: 100%;
   display: flex;
   flex-direction: column;
 }
 
-.event-item__date-overlay {
+.event-item_date-overlay {
   position: absolute;
 }
 
-.event-item__date-overlay {
+.event-item_date-overlay {
   z-index: 2;
 }
 
-.event-item--card .event-item__img {
+.event-item--card .event-item_img {
   display: block;
   width: 100%;
   height: 100%;
@@ -118,42 +118,42 @@
   border-radius: var(--border-radius);
 }
 
-.event-item--card .event-item__info {
+.event-item--card .event-item_info {
   margin-top: 0.8rem;
 }
 
-.event-item--card .event-item__tags {
+.event-item--card .event-item_tags {
   margin-top: 1rem;
 }
 
 @container event-item--card (width > 360px) {
-  .event-item__date-overlay {
+  .event-item_date-overlay {
     margin: 0.8rem;
   }
 
-  .event-item--card .event-item__name {
+  .event-item--card .event-item_name {
     font-size: 1.2rem;
   }
 
-  .event-item--card .event-item__details {
+  .event-item--card .event-item_details {
     column-gap: 1rem;
   }
 }
 
 @container event-item--card (width > 400px) {
-  .event-item--card .event-item__wrapper {
+  .event-item--card .event-item_wrapper {
     padding: 5%;
   }
 
-  .event-item--card .event-item__name {
+  .event-item--card .event-item_name {
     font-size: 1.4rem;
   }
 
-  .event-item--card .event-item__details {
+  .event-item--card .event-item_details {
     column-gap: 1.2rem;
   }
 
-  .event-item--card .event-item__detail {
+  .event-item--card .event-item_detail {
     font-size: 0.95rem;
   }
 }
@@ -169,59 +169,59 @@
   margin: 1rem 0;
 }
 
-.event-item--list-item .event-item__wrapper {
+.event-item--list-item .event-item_wrapper {
   display: grid;
   grid-template-columns: min-content auto min-content;
   width: 100%;
   padding: 0.5rem;
 }
 
-.event-item--list-item .event-item__tags {
+.event-item--list-item .event-item_tags {
   flex-wrap: wrap;
   margin-top: 0.5rem;
 }
 
-.event-item--list-item .event-item__info {
+.event-item--list-item .event-item_info {
   min-width: 10rem;
   margin: auto 0;
   padding: 0 0 0 0.75rem;
 }
 
-.event-item--list-item .event-item__name {
+.event-item--list-item .event-item_name {
   margin: 0;
   line-height: 1.4em;
 }
 
-.event-item--list-item .event-item__details {
+.event-item--list-item .event-item_details {
   margin-top: 0.2rem;
   row-gap: 0.1rem;
 }
 
-.event-item--list-item .event-item__picture {
+.event-item--list-item .event-item_picture {
   display: none;
 }
 
 @container event-item--list-item (width > 600px) {
-  .event-item--list-item .event-item__wrapper {
+  .event-item--list-item .event-item_wrapper {
     padding: 1rem;
   }
 
-  .event-item--list-item .event-item__info {
+  .event-item--list-item .event-item_info {
     padding: 0 1rem;
   }
 
-  .event-item--list-item .event-item__details {
+  .event-item--list-item .event-item_details {
     margin-top: 0.2rem;
     column-gap: 1rem;
     row-gap: 0.2rem;
   }
 
-  .event-item--list-item .event-item__name {
+  .event-item--list-item .event-item_name {
     font-size: 1.2rem;
   }
 
-  .event-item--list-item .event-item__picture,
-  .event-item--list-item .event-item__img {
+  .event-item--list-item .event-item_picture,
+  .event-item--list-item .event-item_img {
     display: block;
     max-height: 5rem;
     height: 100%;
@@ -232,25 +232,25 @@
 }
 
 @container event-item--list-item (width > 700px) {
-  .event-item--list-item .event-item__info {
+  .event-item--list-item .event-item_info {
     padding: 0 1rem;
   }
 
-  .event-item--list-item .event-item__name {
+  .event-item--list-item .event-item_name {
     font-size: 1.3rem;
   }
 
-  .event-item--list-item .event-item__details {
+  .event-item--list-item .event-item_details {
     margin-top: 0.2rem;
     column-gap: 1.2rem;
     row-gap: 0.5rem;
   }
 
-  .event-item--list-item .event-item__detail {
+  .event-item--list-item .event-item_detail {
     font-size: 0.95rem;
   }
 
-  .event-item--list-item .event-item__tags {
+  .event-item--list-item .event-item_tags {
     margin-top: 0.7rem;
   }
 }
