--- a/src/app/career/[...id]/page.css
+++ b/src/app/career/[...id]/page.css
@@ -11,11 +11,11 @@
 
   .jobads_filter-container:after {
     content: '';
-    width: 2rem;
-    height: 2rem;
+    width: 2.6rem;
+    height: 2.6rem;
     position: absolute;
     border-width: .7rem;
-    border-color: var(--color-border-light);
+    border-color: var(--color-border-default);
     border-style: none solid solid none;
     bottom: 0;
     right: 0;
@@ -24,11 +24,11 @@
 
   .jobads_filter-container:before {
     content: '';
-    width: 2rem;
-    height: 2rem;
+    width: 2.6rem;
+    height: 2.6rem;
     position: absolute;
     border-width: .7rem;
-    border-color: var(--color-border-light);
+    border-color: var(--color-border-default);
     border-style: solid solid none none;
     top: 0;
     right: 0;
