--- a/src/app/events/[...id]/page.css
+++ b/src/app/events/[...id]/page.css
@@ -224,11 +224,11 @@
 
     .event-details:before {
         content: '';
-        width: 2rem;
-        height: 2rem;
+        width: 2.6rem;
+        height: 2.6rem;
         position: absolute;
         border-width: .7rem;
-        border-color: var(--color-border-light);
+        border-color: var(--color-border-default);
         border-style: solid solid none none;
         top: 0;
         right: 0;
@@ -252,11 +252,11 @@
 
     .event-description:after {
         content: '';
-        width: 2rem;
-        height: 2rem;
+        width: 2.6rem;
+        height: 2.6rem;
         position: absolute;
         border-width: .7rem;
-        border-color: var(--color-border-light);
+        border-color: var(--color-border-default);
         border-style: solid solid none none;
         top: 0;
         right: 0;
@@ -265,11 +265,11 @@
 
     .event-description:before {
         content: '';
-        width: 2rem;
-        height: 2rem;
+        width: 2.6rem;
+        height: 2.6rem;
         position: absolute;
         border-width: .7rem;
-        border-color: var(--color-border-light);
+        border-color: var(--color-border-default);
         border-style: none solid solid none;
         bottom: 0;
         right: 0;
