--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -107,7 +107,6 @@
 
 
 @media only screen and (min-width: 400px) {
-
     .heading-1 {
         font-size: 2.5rem;
     }
@@ -531,7 +530,8 @@ abbr {
 
 	/* Top Bar */
 	--color-bg-topbar: rgba(30, 30, 30, 0.6);
-	--color-bg-topbar-fallback: rgba(34, 33, 32, 0.99); /* fallback if blur is not supported */
+	/* fallback if blur is not supported */
+	--color-bg-topbar-fallback: rgba(34, 33, 32, 0.99);
 	--color-bg-topbar-open: rgba(20, 20, 20, .8);
 	
 	/* Footer */
@@ -644,7 +644,8 @@ abbr {
 
 	/* Top Bar */
 	--color-bg-topbar: rgba(240, 240, 240, 0.85);
-	--color-bg-topbar-fallback: rgba(253, 251, 250, 0.99); /* fallback if blur is not supported */
+	/* fallback if blur is not supported */
+	--color-bg-topbar-fallback: rgba(253, 251, 250, 0.99);
 	--color-bg-topbar-open: rgba(0, 0, 0, .9);
 
 	/* Footer */
