--- a/src/components/shared/themetoggle/toggle.css
+++ b/src/components/shared/themetoggle/toggle.css
@@ -41,3 +41,10 @@
     transform: scale(1);
     fill: white;
 }
+
+@media only screen and (max-width: 800px) {
+    .topbar--open .theme-toggle_sun-moon,
+    .topbar--open .theme-toggle_sun-moon {
+        fill: white;
+    }
+}
