--- a/src/app/events/[...id]/page.css
+++ b/src/app/events/[...id]/page.css
@@ -146,13 +146,12 @@
 
 .event-banner {
     background-color: rgba(100,100,100,.3);
-}
-
-.event-banner_image {
     display: block;
     aspect-ratio: 10 / 4;
     object-fit: cover;
     width: 100%;
+    border-radius: var(--border-radius);
+    overflow: hidden;
 }
 
 
@@ -237,11 +236,6 @@
 
     .event-datetime-display {
         margin-right: 1.3rem;
-    }
-
-
-    .event-banner, .event-banner_image {
-        border-radius: var(--border-radius);
     }
 
     .event-description {
