--- a/src/components/shared/mazemap/MazeMapEmbed.css
+++ b/src/components/shared/mazemap/MazeMapEmbed.css
@@ -1,13 +1,14 @@
 .mazemap-container {
     position: relative;
+    border-radius: 1em;
+    overflow: visible;
 }
 
 .mazemap {
     width: 100%;
-    border-radius: .5rem;
     display: block;
-    border: .2rem solid var(--color-border-default);
-    margin: auto;
+    border-radius: 1em;
+    overflow: visible;
 }
 
 .mazemap_overlay-item {
