--- a/src/components/jobad/JobadsListItem.css
+++ b/src/components/jobad/JobadsListItem.css
@@ -36,7 +36,6 @@
 
 .jobads-item_wrapper--with-tags {
 	grid-template-areas:
-		'tags'
 		'pic' 
 		'info';
 }
@@ -56,15 +55,17 @@
 
 .jobads-item_picture {
 	grid-area: pic;
-	align-self: baseline;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	background-color: var(--color-border-default);
 	border-radius: var(--border-radius);
 }
 
 .jobads-item_img {
 	display: block;
-    width: 100%;
-	height: 100%;
+	max-width: 100%;
+	max-height: 100%;
 	object-fit: cover;
 	aspect-ratio: 3/2;
 	border-radius: var(--border-radius);
